--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AwesomeBooks</title>
+    <title>Awesome Books ES6</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -29,6 +29,6 @@
       <footer>
         <h3 class="copyRights">Copyrights reserved to <a href="https://github.com/sharminkhan0">@sharminkhan0</a></h3>
       </footer>
-    <script src="./JS/index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
